Fix floats and margin collapsing

--- a/css/base.css
+++ b/css/base.css
@@ -139,9 +139,6 @@ ul {
 ol {
     /* Try to match roughly a single digit and a dot. */
     padding-left: 2ch;
-
-    /* Deal with lists on the side of floats... */
-    overflow: hidden;
 }
 
 img, video {
@@ -194,10 +191,28 @@ button:hover {
     overflow: hidden;
 }
 
-.float-inner > :first-child {
+/* Kill the margin of all the first children tree to mimic how margin
+ * colapsing would otherwise work.
+ *
+ * I don't know of a better way to target all the first children like
+ * this.
+ *
+ * See <https://stackoverflow.com/questions/12477272/select-recursive-last-child-possible>.
+ *
+ * Currently commented because I don't actually need this in any
+ * real-life post. */
+.float-inner > :first-child /* ,
+.float-inner > :first-child > :first-child,
+.float-inner > :first-child > :first-child > :first-child,
+.float-inner > :first-child > :first-child > :first-child > :first-child,
+.float-inner > :first-child > :first-child > :first-child > :first-child > :first-child */ {
     margin-top: 0;
 }
 
-.float-inner > :last-child {
+.float-inner > :last-child /* ,
+.float-inner > :last-child > :last-child,
+.float-inner > :last-child > :last-child > :last-child,
+.float-inner > :last-child > :last-child > :last-child > :last-child,
+.float-inner > :last-child > :last-child > :last-child > :last-child > :last-child */ {
     margin-bottom: 0;
 }
