--- a/css/components/footnotes.css
+++ b/css/components/footnotes.css
@@ -1,5 +1,5 @@
 .footnotes-sep {
-    margin-top: 4em;
+    margin-top: 2rem;
 }
 
 .footnotes p {
