--- a/css/pages/post.css
+++ b/css/pages/post.css
@@ -17,5 +17,8 @@
 }
 
 .post-footer {
+    /* For the rare cases like in `2014/10/low-consumption-home-server.html`
+     * where the last elemnt doesn't have a bottom margin. */
+    margin-top: 2rem;
     border-top: 1px solid var(--gray-2);
 }
